rename param for google app id

--- a/web/pages/index.ejs
+++ b/web/pages/index.ejs
@@ -1,6 +1,6 @@
 <% include blocks/header %>
 <link rel="stylesheet" href="<%-window.libURL%>libs/themes/Ice/style.css">
-<meta name="google-signin-client_id" content="<%- config.appTokenGoogle %>">
+<meta name="google-signin-client_id" content="<%- config.appIdGoogleSignIn %>">
 <style>
 .wide-text{
     text-transform: uppercase;
