--- a/web/pages/loginTokenAddGoogle.ejs
+++ b/web/pages/loginTokenAddGoogle.ejs
@@ -1,7 +1,7 @@
 <%
     window.libURL = originalURL + global.s.checkCorrectPathEnding(config.webPaths.home)
 %>
-<meta name="google-signin-client_id" content="<%- config.appTokenGoogle %>">
+<meta name="google-signin-client_id" content="<%- config.appIdGoogleSignIn %>">
 <script src="<%-window.libURL%>libs/js/jquery.min.js"></script>
 <style>
     body {
