--- a/web/pages/super.ejs
+++ b/web/pages/super.ejs
@@ -102,7 +102,16 @@
                                 <div class="tab-content text-center">
                                     <div class="tab-pane active" id="accounts" role="tabpanel">
                                         <div class="mb-4"><a href="#" class="add btn btn-block btn-default"><i class="fa fa-plus"></i> <%- lang.Add %></a></div>
-                                        <table class="table table-striped"></table>
+                                        <div class="row">
+                                            <div class="col-md-5 text-left">
+                                                <pre class="super-system-info form-group-group red"></pre>
+                                            </div>
+                                            <div class="col-md-7">
+                                                <div class="form-group-group red p-1" style="max-height:400px;overflow:auto">
+                                                    <table class="table table-striped m-0"></table>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="tab-pane text-left" id="config" role="tabpanel">
                                         <% include blocks/superConfigEditor.ejs %>
@@ -194,6 +203,13 @@ function drawSystemLogs(){
         }
     })
 }
+function drawSystemInfo(){
+    $.get(superApiPrefix + $user.sessionKey + '/system/info',function(data){
+        if(data.ok){
+            $('.super-system-info').html($.ccio.init('jsontoblock',data.info))
+        }
+    })
+}
 
 $.ccio={accounts:{}};$.ls=localStorage;
 if(!$user.lang||$user.lang==''){
@@ -228,6 +244,7 @@ $.ccio.ws.on('f',function(d){
             $user.sessionKey = d.superSessionKey
             drawUserList()
             drawSystemLogs()
+            drawSystemInfo()
         break;
         case'log':
             $.ccio.tm(4,d.log,'#logs table')
@@ -266,7 +283,7 @@ $.ccio.tm=function(x,d,z,k){
         case 0://account row
             d.detailsJSON=JSON.parse(d.details);
             $.ccio.accounts[d.ke]=d;
-            tmp+='<tr ke="'+d.ke+'"><td><b class="mail epic-text">'+d.mail+'</b></td><td>'+d.ke+'</td><td><a tabindex="1" class="permission btn btn-sm btn-info"><i class="fa fa-lock"></i></a></td><td><a tabindex="1" class="delete btn btn-sm btn-danger"><i class="fa fa-trash-o"></i></a></td></tr>';
+            tmp+='<tr ke="'+d.ke+'"><td><b class="mail epic-text">'+d.mail+'</b></td><td>'+d.ke+'</td><td><a tabindex="1" class="permission btn badge badge-sm badge-info"><i class="fa fa-lock"></i></a></td><td><a tabindex="1" class="delete btn badge badge-sm badge-danger"><i class="fa fa-trash-o"></i></a></td></tr>';
         break;
         case 4://log row, draw to global and monitor
             if(!d.time){d.time=$.ccio.init('t')}
