update Settings Window Builder, cleanup LDAP presentation

--- a/web/pages/blocks/loginTokenAddLDAP.ejs
+++ b/web/pages/blocks/loginTokenAddLDAP.ejs
@@ -3,6 +3,7 @@
     window.libURL = originalURL + global.s.checkCorrectPathEnding(config.webPaths.home)
 %>
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/bootstrap4.min.css" />
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.basic.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.forms.css">
 <script src="<%-window.libURL%>libs/js/jquery.min.js"></script>
 <script src="<%-window.libURL%>libs/js/jquery.serialize.js"></script>
